@@ -117,6 +117,6 @@ ACE_STATIC_SVC_DEFINE (TAO_BiDirGIOP_Loader,
                        ACE_Service_Type::DELETE_THIS | ACE_Service_Type::DELETE_OBJ,
                        0)
 
-ACE_FACTORY_DEFINE (TAO_BiDirGIOP, TAO_BiDirGIOP_Loader)
+ACE_FACTORY_DEFINE (TAO_BIDIRGIOP, TAO_BiDirGIOP_Loader)
 
 TAO_END_VERSIONED_NAMESPACE_DECL
