@@ -36,7 +36,7 @@ class TAO_ORB_Core;
  * @brief Policy Validator for BiDir GIOP class
  *
  */
-class TAO_BiDirGIOP_Export TAO_BiDirPolicy_Validator : public TAO_Policy_Validator
+class TAO_BIDIRGIOP_Export TAO_BiDirPolicy_Validator : public TAO_Policy_Validator
 {
 public:
   TAO_BiDirPolicy_Validator (TAO_ORB_Core &orb_core);
