@@ -3,11 +3,12 @@ project(*idl) : tao_versioning_idl_defaults, install {
   custom_only = 1
   IDL_Files {
     idlflags += -Gp -Gd -Sci -SS -Sorb -Sa -St \
-                -Wb,export_macro=TAO_BiDirGIOP_Export \
-                -Wb,export_include=tao/BiDir_GIOP/bidirgiop_export.h \
+                -Wb,stub_export_macro=TAO_BIDIRGIOP_Export \
+                -Wb,stub_export_include=tao/BiDir_GIOP/bidirgiop_export.h \
+                -Wb,stub_export_file=bidirgiop_export.h \
                 -Wb,include_guard=TAO_BIDIRGIOP_SAFE_INCLUDE \
                 -Wb,safe_include=tao/BiDir_GIOP/BiDirGIOP.h \
-                -iC BiDir_GIOP
+                -iC BiDir_GIOP -Gxhst
     BiDirPolicy.pidl
   }
 
